--- a/static/bib_files/thesis.bib
+++ b/static/bib_files/thesis.bib
@@ -1,13 +1,13 @@
 @article{msc,
-  title={No-Arbitrage Theorems in Markets Driven by the Fractional Brownian Motion},
-  author={},
-  year={2010},
-  url={http://www.pg.im.ufrj.br/teses/Estatistica/Mestrado/129.pdf}
+  title = {No-Arbitrage Theorems in Markets Driven by the Fractional Brownian Motion},
+  author = {Targino, Rodrigo S.},
+  year = {2010},
+  url = {http://www.pg.im.ufrj.br/teses/Estatistica/Mestrado/129.pdf}
 }
 
 @article{phd,
-  title={Statistical Methods in Financial Risk Management},
-  author={},
-  year={2017},
-  url={http://discovery.ucl.ac.uk/1551579/}
+  title = {Statistical Methods in Financial Risk Management},
+  author = {Targino, Rodrigo S.},
+  year = {2017},
+  url = {http://discovery.ucl.ac.uk/1551579/}
 }
