--- a/static/bib_files/thesis.bib
+++ b/static/bib_files/thesis.bib
@@ -1,13 +1,16 @@
-@article{msc,
+@mastersthesis{msc,
   title = {No-Arbitrage Theorems in Markets Driven by the Fractional Brownian Motion},
   author = {Targino, Rodrigo S.},
-  year = {2010},
+  year ={2010},
+  school = {Federal University of Rio de Janeiro (UFRJ)},
   url = {http://www.pg.im.ufrj.br/teses/Estatistica/Mestrado/129.pdf}
 }
 
-@article{phd,
+@phdthesis{phd,
   title = {Statistical Methods in Financial Risk Management},
   author = {Targino, Rodrigo S.},
   year = {2017},
+  school = {University College London (UCL)},
   url = {http://discovery.ucl.ac.uk/1551579/}
 }
+
