--- a/static/autogenerated_files/individual_bib_files/thesis/targino2010noarbitrage.bib
+++ b/static/autogenerated_files/individual_bib_files/thesis/targino2010noarbitrage.bib
@@ -1,5 +1,6 @@
-@article{targino2010noarbitrage,
+@mastersthesis{targino2010noarbitrage,
  author = {Targino, Rodrigo S.},
+ school = {Federal University of Rio de Janeiro (UFRJ)},
  title = {No-Arbitrage Theorems in Markets Driven by the Fractional Brownian Motion},
  url = {http://www.pg.im.ufrj.br/teses/Estatistica/Mestrado/129.pdf},
  year = {2010}
