Add shell code to update CVs

--- a/src/RodrigoSTarginoCV.Rmd
+++ b/src/RodrigoSTarginoCV.Rmd
@@ -256,8 +256,8 @@ talks %>%
 (\*) Poster presentations.
 
 ```{r, include=FALSE}
-# Makes a copy of the CV in the Git folder, to update the website
+# Makes a copy of the CV to update the website
 file.copy("RodrigoSTarginoCV.pdf",
           overwrite = TRUE,
-          to = "./static/")
+          to = "../static/author_data")
 ```
