--- a/src/RodrigoSTarginoCV_short.Rmd
+++ b/src/RodrigoSTarginoCV_short.Rmd
@@ -28,7 +28,7 @@ library(tidyverse)
 library(RefManageR)
 library(vitae)
 # library(googlesheets4)
-source("functions.R")
+# source("functions.R")
 ```
 
 ```{r bibfiles}
@@ -151,4 +151,12 @@ pubs %>%
 preprints %>%
   # filter(bibtype %in% c("TechReport", "Unpublished")) %>%
   arrange(desc(issued))
+```
+
+
+```{r, include=FALSE}
+# Makes a copy of the CV in the author data
+file.copy("RodrigoSTarginoCV_short.pdf",
+          overwrite = TRUE,
+          to = "../static/author_data")
 ```
