Fix bibfile error

--- a/static/bib_files/talks.bib
+++ b/static/bib_files/talks.bib
@@ -419,7 +419,7 @@
   author = {Targino, Rodrigo S.},
   journal = {Macquarie University,  Sydney, Australia.},
   title = {},
-  year = {2013}'
+  year = {2013}
 }
 
 @article{pres5,
