--- a/src/RodrigoSTarginoCV.Rmd
+++ b/src/RodrigoSTarginoCV.Rmd
@@ -1,7 +1,7 @@
 ---
 name: Rodrigo S Targino
 address: "School of Applied Mathematics (EMAp),\\tabularnewline Getulio Vargas Foundation (FGV), \\tabularnewline Rio de Janeiro, RJ, Brazil."
-www: rtargino.netlify.app
+www: https://rtargino.github.io/website/
 # phone: +61 3 9905 5141
 email: "rodrigo.targino@fgv.br"
 # twitter: robjhyndman
